--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,10 @@ body {
     overflow: hidden;
     position: relative;
     background: 
-        linear-gradient(rgba(0, 31, 66, 0.5)),
-        url('../imgs/fundo1.jpg') center/cover no-repeat;
+        url('../imgs/fundo1.jpg') center/cover no-repeat,
+        linear-gradient(to bottom, rgba(0, 31, 66, 0.5), rgba(0, 31, 66, 0.5));
     margin-top: 0;
+    min-height: 100vh; /* Adicione uma altura mínima */
 }
 
 .container {
@@ -370,8 +371,8 @@ body {
 
 .fundo_sobre {
     background: 
-        linear-gradient(rgba(0, 31, 66, 0.63)),
-        url('../imgs/fundo.jpg') center/cover no-repeat;
+        url('../imgs/fundo2.jpg') center/cover no-repeat,
+        linear-gradient(to bottom, rgba(0, 31, 66, 0.5), rgba(0, 31, 66, 0.5));
 }
 
 .how-it-works {
