--- a/css/style.css
+++ b/css/style.css
@@ -371,8 +371,8 @@ body {
 
 .fundo_sobre {
     background: 
-        url('../imgs/fundo.jpg') center/cover no-repeat,
-        linear-gradient(to bottom, rgba(0, 31, 66, 0.5), rgba(0, 31, 66, 0.5));
+        linear-gradient(rgba(3, 0, 19, 0.7), rgba(16, 0, 59, 0.7)), /* Overlay */
+        url('../imgs/fundo.jpg') center/cover;
 }
 
 .how-it-works {
@@ -458,4 +458,81 @@ body {
     .section-title_pedidos {
         font-size: 2rem;
     }
+}
+
+
+.contato-simples {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.contato-simples h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    color: #000000;
+}
+
+.contato-simples p {
+    color: #666;
+    font-size: 1.2rem;
+}
+
+.icones {
+    display: inline-flex;
+    gap: 20px;
+}
+
+.contato-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px 0;
+    font-size: 1.1em;
+}
+
+.icon {
+    font-size: 1.3em;
+    transition: color 0.3s ease;
+}
+
+.icon:hover {
+    color: #FCBF44;
+}
+
+
+.footer-dark {
+    background-color: #000;
+    color: rgb(109, 109, 109);
+    padding: 20px 0 20px;
+    font-family: 'Arial', sans-serif;
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social-links {
+    display: flex;
+    gap: 30px;
+}
+
+.social-icon {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: rgb(114, 114, 114);
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.social-icon:hover {
+    color: #CF3570;
 }
